--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+          POSTGRES_DB: postgres_test
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
@@ -21,16 +21,12 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: ${{ env.RUBY_VERSION }}
+          ruby-version: 2.5.0
       - name: Install postgres client
         run: sudo apt-get install libpq-dev
       - name: Install dependencies
         run: |
           gem install bundler
           bundler install
-      - name: Create database
-        run: |
-          bundler exec rails db:create RAILS_ENV=test
-          bundler exec rails db:migrate RAILS_ENV=test
       - name: Run tests
         run: bundler exec rake
