--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
           gem install bundler
           bundler install
       - name: Run tests
-        run: bundler exec rake
+        run: bundle exec rspec
